--- a/src/app.css
+++ b/src/app.css
@@ -61,7 +61,7 @@ html {
   }
 
 html {
-    background-color: var(--surface-1);
+    background-color: #fff;
     color: var(--text-1);
     accent-color: var(--brand);
     height: 100%;
@@ -81,6 +81,8 @@ html {
 
 img {
 	border-radius: var(--radius-3);
+  width: 60%;
+  align-self: center;
 }
 
 ul,
@@ -121,6 +123,11 @@ pre{
 p:has(>img){
   display: flex;
   justify-content: center;
+  flex-direction: column;
+}
+
+em{
+  text-align: center;
 }
 
 h1,h2{
