--- a/src/app.css
+++ b/src/app.css
@@ -9,59 +9,49 @@ html {
 	--font-sans: 'Manrope', sans-serif;
 	--font-mono: 'JetBrains Mono', monospace;
 
-      /* light */
-    --brand-light: var(--orange-6);
-    --text-1-light: var(--gray-8);
-    --text-2-light: var(--gray-7);
-    --surface-1-light: var(--gray-0);
-    --surface-2-light: var(--gray-1);
-    --surface-3-light: var(--gray-2);
-    --surface-4-light: var(--gray-3);
-    --surface-shadow-light: var(--gray-8-hsl);
-    --shadow-strength-light: 2%;
-    --spacing-64: 6.4rem;
-    --spacing-24: 2.4rem;
-    --font-24: 2.4rem;
+    /* dark */
+  --brand-dark: var(--orange-3);
+  --text-1-dark: var(--gray-3);
+  --text-2-dark: var(--gray-5);
+  --surface-1-dark: var(--gray-12);
+  --surface-2-dark: var(--gray-11);
+  --surface-3-dark: var(--gray-10);
+  --surface-4-dark: var(--gray-9);
+  --surface-shadow-dark: var(--gray-12-hsl);
+  --shadow-strength-dark: 80%;
 }
 
 :root {
-	color-scheme: light;
+  color-scheme: dark;
 
-  /* set defaults */
-    --brand: var(--brand-light);
-    --text-1: var(--text-1-light);
-    --text-2: var(--text-2-light);
-    --surface-1: var(--surface-1-light);
-    --surface-2: var(--surface-2-light);
-    --surface-3: var(--surface-3-light);
-    --surface-4: var(--surface-4-light);
-    --surface-shadow: var(--surface-shadow-light);
-    --shadow-strength: var(--shadow-strength-light);
-    --spacing-64: 6.4rem;
-    --spacing-24: 2.4rem;
-    --font-24: 2.4rem;
+  --brand: var(--brand-dark);
+  --text-1: var(--text-1-dark);
+  --text-2: var(--text-2-dark);
+  --surface-1: var(--surface-1-dark);
+  --surface-2: var(--surface-2-dark);
+  --surface-3: var(--surface-3-dark);
+  --surface-4: var(--surface-4-dark);
+  --surface-shadow: var(--surface-shadow-dark);
+  --shadow-strength: var(--shadow-strength-dark);
 }
 
 
-[color-scheme="light"] {
-    color-scheme: light;
+[color-scheme="dark"] {
+  color-scheme: dark;
   
-    --brand: var(--brand-light);
-    --text-1: var(--text-1-light);
-    --text-2: var(--text-2-light);
-    --surface-1: var(--surface-1-light);
-    --surface-2: var(--surface-2-light);
-    --surface-3: var(--surface-3-light);
-    --surface-4: var(--surface-4-light);
-    --surface-shadow: var(--surface-shadow-light);
-    --shadow-strength: var(--shadow-strength-light);
-    --spacing-64: 6.4rem;
-    --spacing-24: 2.4rem;
-    --font-24: 2.4rem;
-  }
+  --brand: var(--brand-dark);
+  --text-1: var(--text-1-dark);
+  --text-2: var(--text-2-dark);
+  --surface-1: var(--surface-1-dark);
+  --surface-2: var(--surface-2-dark);
+  --surface-3: var(--surface-3-dark);
+  --surface-4: var(--surface-4-dark);
+  --surface-shadow: var(--surface-shadow-dark);
+  --shadow-strength: var(--shadow-strength-dark);
+}
 
 html {
-    background-color: #fff;
+    background-color: var(--surface-1);
     color: var(--text-1);
     accent-color: var(--brand);
     height: 100%;
@@ -117,7 +107,18 @@ li {
 
 pre{
   display: flex;
-  justify-content: center;
+  justify-self: center;
+  border-radius: var(--radius-3);
+  width: fit-content;
+  padding: var(--size-3);
+}
+
+strong{
+  color: var(--brand);
+}
+
+a{
+  text-decoration: none;
 }
 
 p:has(>img){
@@ -131,22 +132,37 @@ em{
 }
 
 h1,h2{
-  font-size: var(--font-24);
-  font-weight: var(--font-weight-7);
+  color: var(--brand);
 }
 
 h2{
   margin-top: var(--spacing-64);
   margin-bottom: var(--spacing-24);
-  color: var(--brand-light);
+  font-weight: var(--font-weight-5);
 }
 
 p{
   text-align: justify;
 }
 
+.rad-shadow {
+  border: 1px solid hsl(var(--brand-hue) 10% 50% / 15%);
+  box-shadow: 0 1rem .5rem -.5rem;
+  box-shadow:
+    0 2.8px 2.2px hsl(var(--surface-shadow) / calc(var(--shadow-strength) + 3%)),
+    0 6.7px 5.3px hsl(var(--surface-shadow) / calc(var(--shadow-strength) + 1%)),
+    0 12.5px 10px hsl(var(--surface-shadow) / calc(var(--shadow-strength) + 2%)),
+    0 22.3px 17.9px hsl(var(--surface-shadow) / calc(var(--shadow-strength) + 2%)),
+    0 41.8px 33.4px hsl(var(--surface-shadow) / calc(var(--shadow-strength) + 3%)),
+    0 100px 80px hsl(var(--surface-shadow) / var(--shadow-strength))
+  ;
+}
+
 @media(max-width:768px){
-  code{
+  pre{
     width: 100%;
+  }
+  code{
+    overflow-x: scroll;
   }
 }
